app/styles/responsive.less
/* ... */
// BIG PHONES AND SMALL TABLETS
@media only screen and (max-width: 750px) {
  .navbar.special-feature {
    .brand.brand-center {
      float: none;
      margin: 0 auto;
      width: 190px;
      background-position: left center;
    }
  }
  #intro-container {
    .title {
      h1 {
        .font-size(75);
        &:after {
          top:-30px;
        }
      }
      h2 {
        .font-size(16);
      }
    }
    .intro {
      p {
        .font-size(20);
        &:first-child {
          .font-size(24);
        }
      }
    }
  }
  #incidents {
    .incident-grid {
      .date {
        @gridCellSize: 27px;
        .cell {
          width: @gridCellSize;
          height: @gridCellSize;
          margin: 3px;
          &:hover {
            width:@gridCellSize + 4px;
            height:@gridCellSize + 4px;
            margin: 1px;
          }
          &.flagged {
            width:@gridCellSize + 4px;
            height:@gridCellSize + 4px;
            margin: 1px;
            background-position: center -25px;
            &:hover {
              background-position: center 8px;
            }
          }
          &.event {
            .border-radius(50%);
            width:@gridCellSize + 4px;
            height:@gridCellSize + 4px;
            margin: 1px;
            background-size: 24px auto;
            &:hover {
              .border-radius(50%);
              width:@gridCellSize + 6px;
              height:@gridCellSize + 6px;
              margin: 0;
            }
          }
          &.boat-event {
            background-position: center 11px;
            &:hover {
              background-position: center 12px;
            }
          }
          &.media-event {
            background-position: center -16px;
            &:hover {
              background-position: center -15px;
            }
          }
          &.opening-event {
            background-position: center -47px;
            &:hover {
              background-position: center -47px;
            }
          }
          &[data-being-shown]{
            width:@gridCellSize + 6px;
            height:@gridCellSize + 6px;
            .border-radius(5px);
            margin: 0;
            .box-shadow(0 0 15px 0 rgba(255,255,255,0.5));
            background-position: center -28px;
          }
        }
      }
    }
  }
  .filter-menu {
    &.affix {
      padding: 15px 0 10px;
      .month {
        margin-top: 8px;
      }
    }
    .filters {
      h4 {
        display:none;
      }
      .btn-group {
        margin: 0;
        .btn {
          &:after {
            content:'';
            display: block;
            position: absolute;
            width: 30px;
            height:30px;
            background: url('/images/filter-fade.png') no-repeat 0 0 transparent;
            top: 0;
            right: 0;
            z-index: 10;
          }
        }
        &.incidents .btn {
          width:110px;
        }
        &.facilities .btn {
          width:230px;
        }
      }
    }
  }
  .pinned {
    &.share {
      &.noflags {
        .flags {
          margin: 0;
        }
      }
      .flags {
        .flag-icon {
          margin-bottom: 0;
        }
      }
      .share-tools {
        width:auto;
        padding:8px 10px;
        h4 {
          display:none;
          width:40%;
          margin: 0 0 10px;
        }
        ul {
          li.icon a {
            width:40px;
            height:36px;
          }
          li.icon.facebook a {
            background-position: 0 -67px;
          }
          li.icon.email a {
            background-position: 0 -141px;
          }
        }
      }
    }
  }
  .pullquote {
    width:300px;
    padding:20px;
    blockquote {
      .font-size(24);
      max-height: 85px;
    }
    span, em {
      .font-size(11);
    }
  }
}
/* ... */

